--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,29 @@
 <section class="users-section">
   <ul class="users-list">
-    <%= render @users %>
+    <% @users.each do |user| %>
+
+  <% if user.id != current_user.id %>
+    Name: <%= user.name %>
+    <% if user.received_friendships.where(sender_id: current_user.id).exists? %>
+      <% if user.received_friendships.where(sender_id: current_user.id).first.status %>
+        <span> You're friends with this person </span>
+      <% else %>
+        <span> Friendship pending </span>
+      <% end %>
+    <% elsif user.sent_friendships.where(receiver_id: current_user.id).exists? %>
+      <% if user.sent_friendships.where(receiver_id: current_user.id).first.status %>
+        <span> You're friends with this person </span>
+      <% else %>
+        <span>
+        <%= link_to 'Accept', friendship_path(user.sent_friendships.where(receiver_id: current_user.id).first, friendship: {status: true }), method: :patch %>
+        <%= link_to 'Decline', user.sent_friendships.where(receiver_id: current_user.id).first , method: :delete %>
+        </span>
+      <% end %>
+    <% else %>
+      <%= link_to 'Invite', friendships_path(friendship: { sender_id: current_user.id, receiver_id: user.id, status: false }), method: :post %>
+    <% end %>
+      <%= link_to 'See Profile',  user_path(user) %>
+  <% end %>
+<% end %>
   </ul>
 </section>
