--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,11 +19,12 @@
      <% else %>
        <%= link_to 'Invite', friendships_path(friendship: { sender_id: current_user.id, receiver_id: @user.id, status: false }), method: :post %>
      <% end %>
-     
+
   <article class="timeline">
     <h3>Recent posts:</h3>
     <ul class="posts">
       <%= render @posts %>
+      <%= render @posts.friend_id %>
     </ul>
   </article>
 </section>
